--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -237,12 +237,15 @@
 
                 <!-- Modal content-->
                 <div class="modal-content">
-                    <div v-if="selectedContract">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                             <h4>Contract Details</h4>
                         </div>
                         <div class="modal-body">
+                            <div v-if="!selectedContract">
+                                <span class="text-muted">Contract expired or none selected.</span>
+                            </div>
+                            <div v-if="selectedContract">
                             <h4>
                                 {{selectedContract.name}}
 
@@ -273,11 +276,12 @@
                             <div v-bind:class="{ 'text-danger': expiringDanger(selectedContract.expires), 'text-warning': expiringWarning(selectedContract.expires), 'text-success': expiringSuccess(selectedContract.expires) }">{{readableTime(selectedContract.expires - Date.now())}} remaining</div>
 
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn pull-right" data-dismiss="modal" v-bind:class="{ 'btn-success': canSendExpedition(selectedContract), 'btn-primary': !canSendExpedition(selectedContract) }" @click="sendExpedition(selectedContract)" :disabled="!canSendExpedition(selectedContract)">Start</button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                         </div>
-                    </div>
+                        <div class="modal-footer">
+                            <button v-if="selectedContract" type="button" class="btn pull-right" data-dismiss="modal" v-bind:class="{ 'btn-success': canSendExpedition(selectedContract), 'btn-primary': !canSendExpedition(selectedContract) }" @click="sendExpedition(selectedContract)" :disabled="!canSendExpedition(selectedContract)">Start</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+
+                        </div>
                 </div>
             </div>
         </div>
