--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -233,17 +233,14 @@
 
         <!-- Modal View Contract Box -->
         <div id="contractDetails" class="modal fade" role="dialog">
-            <div class="modal-dialog">
+            <div class="modal-dialog" style="overflow-y: initial !important">
 
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4>Contract Details</h4>
-                    </div>
-                    <div class="modal-body">
                         <div v-if="!selectedContract">
-                            <span class="text-muted">Contract expired or none selected.</span>
+                            <span class="text-muted">Contract expired or none selected. <button type="button" class="btn btn-info" @click="QuestManager().selectNextContract()">Next Contract</button></span>
                         </div>
                         <div v-if="selectedContract">
                             <h4>
@@ -252,11 +249,8 @@
                             <div v-if="selectedContract.contractAmount != undefined">{{selectedContract.contractAmount}} coins</div>
                             <span>Requires</span>
                             <div v-if="selectedContract.requirements != undefined">
-                                <div v-for="adventurerRequirement in selectedContract.requirements.adventurers">
-                                    {{adventurerRequirement.amount}} {{adventurerRequirement.type}} <span v-bind:class="{ 'text-danger': lessthan(getHiredCount(adventurerRequirement.type), adventurerRequirement.amount), 'text-success': !lessthan(getHiredCount(adventurerRequirement.type), adventurerRequirement.amount) }">({{getHiredCount(adventurerRequirement.type)}}/{{adventurerRequirement.amount}})</span>
-                                </div>
                                 <div v-for="attributesRequirement in selectedContract.requirements.attributes">
-                                    {{attributesRequirement.type}} {{attributesRequirement.amount}}
+                                    {{attributesRequirement.amount}} {{attributesRequirement.type}} <span v-bind:class="{ 'text-danger': lessthan(AdventurerManager().getCurrentPartyAttribute(attributesRequirement.type), attributesRequirement.amount), 'text-success': !lessthan(AdventurerManager().getCurrentPartyAttribute(attributesRequirement.type), attributesRequirement.amount) }">({{AdventurerManager().getCurrentPartyAttribute(attributesRequirement.type)}}/{{attributesRequirement.amount}})</span>
                                 </div>
                             </div>
 
@@ -273,27 +267,36 @@
                                 <div class="progress-bar progress-bar-success" v-bind:style="{ width: Math.ceil(selectedContract.rewardFactor * 10) * 10 + '%' }"></div>
                             </div>
                             <div v-bind:class="{ 'text-danger': expiringDanger(selectedContract.expires), 'text-warning': expiringWarning(selectedContract.expires), 'text-success': expiringSuccess(selectedContract.expires) }">{{readableTime(selectedContract.expires - Date.now())}} remaining</div>
-
                         </div>
+                    </div>
+                    <div class="modal-body" style="max-height: 50vh; overflow-y: auto;">
                         <div>
-                            <h4>Requirements</h4>
-                            <div v-for="attribute in AdventurerManager().getCurrentPartyAttributes()">
-                                {{attribute.name}}: {{attribute.amount}}
-                            </div>
-                            
-                            <h4>Adventurers</h4>
-                            <div v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Idle')">
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox" v-model="adventurer.includeInParty">{{adventurer.name.full}}</input>
-                                    </label>
-                                </div>
-                            </div>
+                            <h4>Party</h4>
+                            <table class="table table-striped table-hover ">
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Skills</th>
+                                    </tr>
+                                </thead>
+                                <tbody style="overflow: auto;">
+                                    <tr v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Idle')" @click="adventurer.includeInParty = !adventurer.includeInParty" v-bind:class="{ 'default': !adventurer.includeInParty, 'success': adventurer.includeInParty }">
+                                        <td>{{adventurer.name.full}}</td>
+                                        <td>
+                                            <ul>
+                                                <li v-for="skill in adventurer.skills">{{skill.name}} {{skill.amount}}</li>
+                                            </ul>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button v-if="selectedContract" type="button" class="btn pull-right" data-dismiss="modal" v-bind:class="{ 'btn-success': canSendExpedition(selectedContract), 'btn-primary': !canSendExpedition(selectedContract) }" @click="sendExpedition(selectedContract)" :disabled="!canSendExpedition(selectedContract)">Start</button>
+                        <button v-if="selectedContract" type="button" class="btn pull-right" data-dismiss="modal" v-bind:class="{ 'btn-success': QuestManager().canSendSelectedQuest(), 'btn-primary': !QuestManager().canSendSelectedQuest() }" @click="QuestManager().sendSelectedQuest()"
+                            :disabled="!QuestManager().canSendSelectedQuest()">Start</button>
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-info" @click="QuestManager().selectNextContract()">Next Contract</button>
 
                     </div>
                 </div>
@@ -312,16 +315,7 @@
                     </li>
                     <li class="">
                         <a style="padding: 1px 2px;" href="#contracts" data-toggle="tab" aria-expanded="false">
-                            <img v-if="location.availableContracts.length == 0" width="32px;" src="./img/icons/stabbed-note.png" />
-                            <img v-if="location.availableContracts.length != 0" width="32px;" src="./img/icons/stabbed-note-green.png" />
-                            <!--<span class="badge">{{location.availableContracts.length}}</span>-->
-                        </a>
-                    </li>
-                    <li class="">
-                        <a style="padding: 1px 2px;" href="#adventurers" data-toggle="tab" aria-expanded="false">
-                            <img v-if="location.availableHires.length == 0" width="32px;" src="./img/icons/stabbed-note-body.png" />
-                            <img v-if="location.availableHires.length != 0" width="32px;" src="./img/icons/stabbed-note-body-green.png" />
-                            <!--<span class="badge">{{location.availableHires.length}}</span>-->
+                            <img width="32px;" src="./img/icons/stabbed-note.png" />
                         </a>
                     </li>
                     <li class="">
@@ -380,56 +374,47 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="contracts">
-                        <span v-if="LocationManager().getCurrentLocation().availableContracts.length == 0" class="text-muted text-center col-xs-12">No contracts</span>
-                        <button v-if="startAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="startAllContracts()">Start All</button>
-                        <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
-                            <div v-for="contract in LocationManager().getCurrentLocation().availableContracts" key="contract.name">
-                                <div class="well well-sm">
-                                    <h4>
-                                        {{contract.name}}
-                                        <button type="button" class="btn btn-sm btn-info pull-right" data-toggle="modal" data-target="#contractDetails" @click="viewContract(contract)">View</button>
-                                        <!-- <button type="button" class="btn btn-sm pull-right" v-bind:class="{ 'btn-success': canSendExpedition(contract), 'btn-primary': !canSendExpedition(contract) }" @click="sendExpedition(contract)" :disabled="!canSendExpedition(contract)">Start</button> -->
-                                    </h4>
-                                    <!-- <div v-if="contract.contractAmount != undefined">{{contract.contractAmount}} coins</div>
-                                    <span>Requires</span>
-                                    <div v-if="contract.requirements != undefined">
-                                        <div v-for="adventurerRequirement in contract.requirements.adventurers">
-                                            {{adventurerRequirement.amount}} {{adventurerRequirement.type}} <span v-bind:class="{ 'text-danger': lessthan(getHiredCount(adventurerRequirement.type), adventurerRequirement.amount), 'text-success': !lessthan(getHiredCount(adventurerRequirement.type), adventurerRequirement.amount) }">({{getHiredCount(adventurerRequirement.type)}}/{{adventurerRequirement.amount}})</span>
-                                        </div>
-                                        <div v-for="attributesRequirement in contract.requirements.attributes">
-                                            {{attributesRequirement.type}} {{attributesRequirement.amount}}
-                                        </div>
-                                    </div>
 
-                                    <div>Duration: {{Math.ceil(Math.sqrt(contract.duration)/42)}}/10</div>
-                                    <div class="progress" style="height: 7px; margin-bottom: 0px;">
-                                        <div class="progress-bar progress-bar-info" v-bind:style="{ width: Math.ceil(Math.sqrt(contract.duration)/42)*10 + '%' }"></div>
+                        <ul class="nav nav-tabs">
+                            <li class="active">
+                                <a href="#questContracts" data-toggle="tab" aria-expanded="false">Quests <span class="badge">{{location.availableContracts.length}}</span></a>
+                            </li>
+                            <li>
+                                <a href="#adventurerContracts" data-toggle="tab" aria-expanded="false">Adventurers <span class="badge">{{location.availableHires.length}}</span></a>
+                            </li>
+                        </ul>
+                        <div id="myTabContent" class="tab-content">
+                            <div class="tab-pane fade active in" id="questContracts">
+                                <span v-if="LocationManager().getCurrentLocation().availableContracts.length == 0" class="text-muted text-center col-xs-12">No contracts</span>
+                                <button v-if="startAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="startAllContracts()">Start All</button>
+                                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
+                                    <div v-for="contract in LocationManager().getCurrentLocation().availableContracts" key="contract.name">
+                                        <div class="well well-sm">
+                                            <h4>
+                                                {{contract.name}}
+                                                <button type="button" class="btn btn-sm btn-info pull-right" data-toggle="modal" data-target="#contractDetails" @click="viewContract(contract)">View</button>
+                                            </h4>
+                                            <div v-bind:class="{ 'text-danger': expiringDanger(contract.expires), 'text-warning': expiringWarning(contract.expires), 'text-success': expiringSuccess(contract.expires) }">{{readableTime(contract.expires - Date.now())}} remaining</div>
+                                        </div>
                                     </div>
-                                    <div>Risk: {{Math.ceil(contract.risk * 10)}}/10</div>
-                                    <div class="progress" style="height: 7px; margin-bottom: 0px;">
-                                        <div class="progress-bar progress-bar-danger" v-bind:style="{ width: Math.ceil(contract.risk * 10) * 10 + '%' }"></div>
+                                </transition-group>
+                            </div>
+                            <div class="tab-pane fade" id="adventurerContracts">
+                                <span v-if="LocationManager().getCurrentLocation().availableHires.length == 0" class="text-muted text-center col-xs-12">No adventurers for hire</span>
+                                <button v-if="hireAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="hireAll()">Hire All</button>
+                                <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
+                                    <div v-for="adventurer in LocationManager().getCurrentLocation().availableHires" key="adventurer.name">
+                                        <div class="well well-sm">
+                                            <h4>{{adventurer.name}} <button type="button" class="btn btn-sm pull-right" v-bind:class="{ 'btn-success': canHire(adventurer.name), 'btn-primary': !canHire(adventurer.name) }" @click="hire(adventurer)" :disabled="!canHire(adventurer.name)">Hire ({{getCost(adventurer.name)}} coins)</button>
+                                            </h4>
+                                            <div v-bind:class="{ 'text-danger': expiringDanger(adventurer.expires), 'text-warning': expiringWarning(adventurer.expires), 'text-success': expiringSuccess(adventurer.expires) }">{{readableTime(adventurer.expires - Date.now())}} remaining</div>
+                                        </div>
                                     </div>
-                                    <div>Reward: {{Math.ceil(contract.rewardFactor * 10)}}/10</div>
-                                    <div class="progress" style="height: 7px; margin-bottom: 0px;">
-                                        <div class="progress-bar progress-bar-success" v-bind:style="{ width: Math.ceil(contract.rewardFactor * 10) * 10 + '%' }"></div>
-                                    </div> -->
-                                    <div v-bind:class="{ 'text-danger': expiringDanger(contract.expires), 'text-warning': expiringWarning(contract.expires), 'text-success': expiringSuccess(contract.expires) }">{{readableTime(contract.expires - Date.now())}} remaining</div>
-                                </div>
+                                </transition-group>
                             </div>
-                        </transition-group>
-                    </div>
-                    <div class="tab-pane fade" id="adventurers">
-                        <span v-if="LocationManager().getCurrentLocation().availableHires.length == 0" class="text-muted text-center col-xs-12">No adventurers for hire</span>
-                        <button v-if="hireAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="hireAll()">Hire All</button>
-                        <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
-                            <div v-for="adventurer in LocationManager().getCurrentLocation().availableHires" key="adventurer.name">
-                                <div class="well well-sm">
-                                    <h4>{{adventurer.name}} <button type="button" class="btn btn-sm pull-right" v-bind:class="{ 'btn-success': canHire(adventurer.name), 'btn-primary': !canHire(adventurer.name) }" @click="hire(adventurer)" :disabled="!canHire(adventurer.name)">Hire ({{getCost(adventurer.name)}} coins)</button>
-                                    </h4>
-                                    <div v-bind:class="{ 'text-danger': expiringDanger(adventurer.expires), 'text-warning': expiringWarning(adventurer.expires), 'text-success': expiringSuccess(adventurer.expires) }">{{readableTime(adventurer.expires - Date.now())}} remaining</div>
-                                </div>
-                            </div>
-                        </transition-group>
+                        </div>
+
+
                     </div>
                     <div class="tab-pane fade" id="hired">
                         <span v-if="hiredAdventurers().length == 0" class="text-muted text-center col-xs-12">No adventurers</span>
@@ -461,6 +446,7 @@
                                         <button type="button" class="btn btn-info pull-right" @click="AdventurerManager().talkTo(adventurer.name.first)">Talk to {{adventurer.name.first}}</button>
                                     </h4>
                                     <div>
+                                        <div>Status: {{adventurer.status}}</div>
                                         <div>Age: {{adventurer.age}}</div>
                                         <div v-for="skill in adventurer.skills">
                                             {{skill.name}}: {{skill.amount}}
