--- a/www/html/app.html
+++ b/www/html/app.html
@@ -1,33 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Adventurers of Otium</title>
-    <link rel="icon" type="image/png" href="img/favicon.png">
-
-    <script src="./js/lib/jquery.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-
-    <link rel="stylesheet" href="css/alertify.min.css" />
-    <!-- <link rel="stylesheet" href="css/bootstrap-glyphicons.min.css" /> -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-    <!-- Alertify Bootstrap theme -->
-    <link rel="stylesheet" href="css/alertify.bootstrap.min.css" />
-
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/bootstrap.slate.min.css" />
-    <link rel="stylesheet" href="css/animate.css" />
-
-    <!--This sets the baseUrl to the "scripts" directory, and
-    loads a script that will have a module ID of 'main'-->
-    <script data-main="js/app/idle-game-2.js" src="js/require.js"></script>
-</head>
-
-<body>
     <div id="AdventurersGame">
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
@@ -63,245 +33,40 @@
             </div>
         </nav>
 
-        <!-- Modal Achievements Box -->
-        <div id="achievements" class="modal fade" role="dialog">
-            <div class="modal-dialog">
+        <div id="achievements"></div>
+        <script>
+            $.get("./html/modals/achievements.html", function(data) {
+                $("#achievements").replaceWith(data);
+            });
+        </script>
 
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4>Achievements</h4>
-                    </div>
-                    <div class="modal-body">
-                        <table class="table table-striped table-hover ">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Description</th>
-                                    <!-- <th>Progress</th> -->
-                                </tr>
-                            </thead>
-                            <tr v-for="achievement in achievements" v-bind:class="{ 'default': !hasAchievement(achievement), 'success': hasAchievement(achievement) }">
-                                <td>{{achievement.name}}</td>
-                                <td>{{achievement.description}}</td>
-                                <td>
-                                    <!-- <div class="progress progress-striped">
-                                        <div class="progress-bar" v-bind:style="{ width: achievementProgress(achievement) + '%' }" v-bind:class="{ 'progress-bar-info': !hasAchievement(achievement), 'progress-bar-success': hasAchievement(achievement) }"></div>
-                                    </div> -->
-                                </td>
-                            </tr>
-                        </table>
-                        <!--<img :src="'./img/' + achievement.icon" />-->
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
+        <div id="stats"></div>
+        <script>
+            $.get("./html/modals/stats.html", function(data) {
+                $("#stats").replaceWith(data);
+            });
+        </script>
 
-        <!-- Modal Stats Box -->
-        <div id="stats" class="modal fade" role="dialog">
-            <div class="modal-dialog">
+        <div id="options"></div>
+        <script>
+            $.get("./html/modals/options.html", function(data) {
+                $("#options").replaceWith(data);
+            });
+        </script>
 
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4>Statistics</h4>
-                    </div>
-                    <div class="modal-body">
+        <div id="releaseNotes"></div>
+        <script>
+            $.get("./html/modals/releaseNotes.html", function(data) {
+                $("#releaseNotes").replaceWith(data);
+            });
+        </script>
 
-                        <div class="input">
-                            <label>Filter
-                                        <input type="input" v-model="options.statFilter"/>
-                                    </label>
-                        </div>
-                        <table class="table table-striped table-hover ">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Current</th>
-                                    <th>All Time</th>
-                                </tr>
-                            </thead>
-                            <tr v-for="stat in filteredStats(options.statFilter)">
-                                <td>{{stat.name}}</td>
-                                <td>{{stat.current}}</td>
-                                <td>{{stat.allTime}}</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Modal Options Box -->
-        <div id="options" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4>Options</h4>
-                    </div>
-                    <div class="modal-body">
-                        <button @click="reset()" type="button" class="btn btn-default" data-dismiss="modal">Reset the Game</button>
-
-                        <h3>Autoplay</h3>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" v-model="options.automaticHire">Automatically hire available adventurers</input>
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" v-model="options.automaticClaim">Automatically claim completed expeditions</input>
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" v-model="options.automaticSend">Automatically send available contracts</input>
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" v-model="options.automaticRelocate">Automatically relocate to better locations</input>
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" v-model="options.automaticFreeCoins">Automatically claim free coins</input>
-                            </label>
-                        </div>
-                        <h3>Display</h3>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" v-model="options.showMessageTimeAsRealTime">Show message time as real time</input>
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" v-model="options.claimAllButtons">Display "Claim All" Buttons</input>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Modal About Box -->
-        <div id="releaseNotes" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title" @click="cheat()">Release History</h4>
-                    </div>
-                    <div class="modal-body">
-                        <div class="list-group">
-                            <div v-for="version in game.versions" class="list-group-item">
-                                <h3 class="list-group-item-heading">{{version.number}}</h3>
-                                <p class="list-group-item-text">{{version.description}}</p>
-                                <h4>Features</h4>
-                                <ul>
-                                    <li v-for="feature in version.features">{{feature}}</li>
-                                </ul>
-                                <h4>Bug fixes</h4>
-                                <ul>
-                                    <li v-for="bugfix in version.bugfixes">{{bugfix}}</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Modal View Contract Box -->
-        <div id="contractDetails" class="modal fade" role="dialog">
-            <div class="modal-dialog" style="overflow-y: initial !important">
-
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <div v-if="!selectedContract">
-                            <span class="text-muted">Contract expired or none selected. <button type="button" class="btn btn-info" @click="QuestManager().selectNextContract()">Next Contract</button></span>
-                        </div>
-                        <div v-if="selectedContract">
-                            <h4>
-                                {{selectedContract.name}}
-                            </h4>
-                            <div v-if="selectedContract.contractAmount != undefined">{{selectedContract.contractAmount}} coins</div>
-                            <span>Requires</span>
-                            <div v-if="selectedContract.requirements != undefined">
-                                <div v-for="attributesRequirement in selectedContract.requirements.attributes">
-                                    {{attributesRequirement.amount}} {{attributesRequirement.type}} <span v-bind:class="{ 'text-danger': lessthan(AdventurerManager().getCurrentPartyAttribute(attributesRequirement.type), attributesRequirement.amount), 'text-success': !lessthan(AdventurerManager().getCurrentPartyAttribute(attributesRequirement.type), attributesRequirement.amount) }">({{AdventurerManager().getCurrentPartyAttribute(attributesRequirement.type)}}/{{attributesRequirement.amount}})</span>
-                                </div>
-                            </div>
-
-                            <div>Duration: {{Math.ceil(Math.sqrt(selectedContract.duration)/42)}}/10</div>
-                            <div class="progress" style="height: 7px; margin-bottom: 0px;">
-                                <div class="progress-bar progress-bar-info" v-bind:style="{ width: Math.ceil(Math.sqrt(selectedContract.duration)/42)*10 + '%' }"></div>
-                            </div>
-                            <div>Risk: {{Math.ceil(selectedContract.risk * 10)}}/10</div>
-                            <div class="progress" style="height: 7px; margin-bottom: 0px;">
-                                <div class="progress-bar progress-bar-danger" v-bind:style="{ width: Math.ceil(selectedContract.risk * 10) * 10 + '%' }"></div>
-                            </div>
-                            <div>Reward: {{Math.ceil(selectedContract.rewardFactor * 10)}}/10</div>
-                            <div class="progress" style="height: 7px; margin-bottom: 0px;">
-                                <div class="progress-bar progress-bar-success" v-bind:style="{ width: Math.ceil(selectedContract.rewardFactor * 10) * 10 + '%' }"></div>
-                            </div>
-                            <div v-bind:class="{ 'text-danger': expiringDanger(selectedContract.expires), 'text-warning': expiringWarning(selectedContract.expires), 'text-success': expiringSuccess(selectedContract.expires) }">{{readableTime(selectedContract.expires - Date.now())}} remaining</div>
-                        </div>
-                    </div>
-                    <div class="modal-body" style="max-height: 50vh; overflow-y: auto;">
-                        <div>
-                            <h4>Party</h4>
-                            <table class="table table-striped table-hover ">
-                                <thead>
-                                    <tr>
-                                        <th>Name</th>
-                                        <th>Skills</th>
-                                    </tr>
-                                </thead>
-                                <tbody style="overflow: auto;">
-                                    <tr v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Idle')" @click="adventurer.includeInParty = !adventurer.includeInParty" v-bind:class="{ 'default': !adventurer.includeInParty, 'success': adventurer.includeInParty }">
-                                        <td>{{adventurer.name.full}}</td>
-                                        <td>
-                                            <ul>
-                                                <li v-for="skill in adventurer.skills">{{skill.name}} {{skill.amount}}</li>
-                                            </ul>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button v-if="selectedContract" type="button" class="btn pull-right" data-dismiss="modal" v-bind:class="{ 'btn-success': QuestManager().canSendSelectedQuest(), 'btn-primary': !QuestManager().canSendSelectedQuest() }" @click="QuestManager().sendSelectedQuest()"
-                            :disabled="!QuestManager().canSendSelectedQuest()">Start</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-info" @click="QuestManager().selectNextContract()">Next Contract</button>
-
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div id="contractDetails"></div>
+        <script>
+            $.get("./html/modals/contractDetails.html", function(data) {
+                $("#contractDetails").replaceWith(data);
+            });
+        </script>
 
         <!-- Main Content -->
         <div class="container" style="padding-bottom: 65px; padding-top: 65px;">
@@ -413,8 +178,6 @@
                                 </transition-group>
                             </div>
                         </div>
-
-
                     </div>
                     <div class="tab-pane fade" id="hired">
                         <span v-if="hiredAdventurers().length == 0" class="text-muted text-center col-xs-12">No adventurers</span>
@@ -568,6 +331,3 @@
             </div>
         </nav>
     </div>
-</body>
-
-</html>
