Added link to data in navbar

--- a/www/html/navBar.html
+++ b/www/html/navBar.html
@@ -23,8 +23,9 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#" data-toggle="modal" data-target="#releaseNotes">Release Notes</a></li>
+                                    <li><a href="./data.html" target="_blank">Data</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href="https://jameshurburgh.github.io/about.html">About the Author</a></li>
+                                    <li><a href="https://jameshurburgh.github.io/about.html" target="_blank">About the Author</a></li>
                                     <li><a href="https://www.patreon.com/bePatron?u=6205348" target="_blank">Become a Patron!</a></li>
                                 </ul>
                             </li>
