--- a/www/html/tabs/itemsTab.html
+++ b/www/html/tabs/itemsTab.html
@@ -1,5 +1,5 @@
 <span v-if="ownedItems.length == 0" class="text-muted text-center col-xs-12">No items</span>
-<table class="table table-striped table-hover ">
+<table v-if="ownedItems.length != 0" class="table table-striped table-hover ">
     <thead>
         <tr>
             <th>Name</th>
